ecs/ecs-splunk/alb.tf
# resource "aws_alb" "splunk-alb" {
#   name            = "${var.server-name}-balancer"
# #   subnets         = aws_subnet.public.*.id
#   subnets         = [ aws_subnet.public_subnet.*.id ]
#   security_groups = [aws_security_group.splunk_alb_sg.id]
# }

# resource "aws_alb_target_group" "splunk-tg" {
#   name        = "${var.server-name}-target-group"
#   port        = 80
#   protocol    = "HTTP"
#   vpc_id      = aws_vpc.vpc.id
#   target_type = "ip"

#   health_check {
#     port                = var.app_port
#     healthy_threshold   = "3"
#     interval            = "30"
#     protocol            = "HTTP"
#     matcher             = "200"
#     timeout             = "3"
#     path                = var.health_check_path
#     unhealthy_threshold = "2"
#   }
# }

# # Redirect all traffic from the ALB to the target group
# resource "aws_alb_listener" "front_end" {
#   load_balancer_arn = aws_alb.splunk-alb.id
#   port              = var.app_port
#   protocol          = "HTTP"

#   default_action {
#     target_group_arn = aws_alb_target_group.splunk-tg.id
#     type             = "forward"
#   }
# }
